Align items properly

--- a/index.css
+++ b/index.css
@@ -11,6 +11,9 @@ body {
 }
 
 .container {
+    align-items: center;
+    margin: auto;
+    max-width: 500px;
     display: flex;
     justify-content: space-around;
 }
